# tascli

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: benchmark.yml  rust.yml  tests.yml
bench/: README.md  basic.sh  composite.sh  github_workflow.sh  github_workflow_composite.sh  with_config.sh
demo/: demo.sh  example.zshrc
src/: main.rs
src/actions/: addition.rs  display.rs  handler.rs  list.rs  mod.rs  modify.rs
src/actions/display/: mod.rs  print.rs  row.rs  table.rs
src/actions/list/: mod.rs  records.rs  tasks.rs
src/actions/modify/: done.rs  mod.rs  update.rs
src/actions/ops/: backup.rs  batch.rs  mod.rs  stat.rs
src/args/: cron.rs  mod.rs  parser.rs  timestr.rs
src/config/: mod.rs
src/db/: cache.rs  conn.rs  crud.rs  item.rs  mod.rs  ops.rs
src/tests/: mod.rs
tests/: README.md  basic_operations.rs  interactive_batch.rs  interactive_done.rs
