[package]
name = "chroniclite"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cclite"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
rusqlite = "0.34.0"

[dev-dependencies]
tempfile = "3.19.0"
