[package]
name = "tascli"
version = "0.5.0"
edition = "2024"
description = "A simple CLI tool for tracking tasks and records from terminal"
license = "MIT"
repository = "https://github.com/Aperocky/tascli"

[[bin]]
name = "tascli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
regex = "1.11"
terminal_size = "0.4"
unicode-width = "0.2.0"

[dev-dependencies]
tempfile = "3.19.0"
